--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,1 +1,92 @@
-/* You CSS goes in here */
+.instructions-box {
+  margin: auto;
+  margin-top: 1%;
+  max-width: 80%;
+  padding: 1% 1%;
+}
+
+.procedure-message {
+  font-size: 120%;
+}
+
+.workspace {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.sidebar {
+  height: 100%;
+}
+
+.apparatus {
+  max-width: 20%;
+  order: 1;
+  margin-left: 2.5%;
+}
+
+.apparatus-end {
+  padding-bottom: 20%;
+}
+
+.control {
+  border-top: 3px solid rgb(151, 210, 61);
+}
+
+.simulation {
+  order: 2;
+  border: 3px solid rgb(0, 0, 0);
+  max-width: 70%;
+  max-height: 700px;
+}
+
+.observations-box {
+  width: 20%;
+  margin-right: 2.5%;
+  order: 3;
+  display: none;
+}
+
+#torch-row {
+  visibility: hidden;
+}
+
+@media screen and (min-width: 769px) {
+  .instructions-box {
+    margin-left: 24%;
+    width: 71%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .instructions-box {
+    display: none;
+  }
+
+  .workspace {
+    flex-wrap: wrap;
+  }
+
+  .apparatus {
+    order: 1;
+    width: 40%;
+    margin-left: none;
+    overflow-wrap: break-word;
+    max-width: 100%;
+  }
+
+  .simulation {
+    order: 3;
+    width: 100%;
+    max-height: none;
+  }
+
+  .observations-box {
+    order: 2;
+    width: 40%;
+    max-width: auto;
+    margin-right: 0.5%;
+    display: block;
+    word-break: break-word;
+  }
+}
